appId: br.com.leaf.ride
---
- extendedWaitUntil:
    visible:
      id: "driver-live-primary-action-complete-button"
    timeout: 60000

- tapOn:
    point: "82%,91%"

- extendedWaitUntil:
    visible:
      id: "driver-receipt-screen"
    timeout: 90000
